--- a/introduction/index.html
+++ b/introduction/index.html
@@ -16,7 +16,7 @@ IT Experience<br>
 Hobbies & Interests<br>
 Goals In Life / Dream<br>
 Picture Gallery<br>
- <img src="https://www.w3schools.com/html/img_girl.jpg" alt="Girl with a jacket" width="500" height="600">
+ <img src="https://scontent.fmnl17-5.fna.fbcdn.net/v/t39.30808-6/490834871_9544214595662487_8270525293443766825_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeEUWSpk0xORTu9PiLRR_yyPYlTOvshnAT1iVM6-yGcBPVS6s33ypFy_FiPBrtk1A-MqznJ2RNx9TAZ1SihBGUK_&_nc_ohc=j1mJG5_qpzEQ7kNvwHh35eO&_nc_oc=AdmXhEumcE3LUSWjJs-colrsPZl8FLhXMjdoPCs5Co35ZdZ2K1aXNHP6SssBnun3mdU&_nc_zt=23&_nc_ht=scontent.fmnl17-5.fna&_nc_gid=ZKTTDFlns1vbbItdMrbSVg&oh=00_Afg0tiKGxX147gCD3_ALw1DJ_ZFJcqVjXqdP-I9BwB5goQ&oe=6921F4D4" alt="Girl with a jacket" width="500" height="600">
 </p>
 </body>
 </html>
